--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   intl: ^0.19.0
   flutter_localization: ^0.3.0
   shared_preferences: ^2.5.3
+  lottie: ^3.0.0
+  smooth_page_indicator: ^1.2.1
+  fl_chart: ^0.69.2
+  palette_generator: ^0.3.3+7
 
 
 
@@ -71,8 +75,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-#  assets:
-#    - images/logos/
+  assets:
+    - assets/animations/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
