--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   smooth_page_indicator: ^1.2.1
   fl_chart: ^0.69.2
   palette_generator: ^0.3.3+7
+  flutter_slidable: ^3.1.2
 
 
 
