--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,10 @@ dev_dependencies:
   shimmer_animation: ^2.2.2
   url_launcher: ^6.3.1
   image_picker: ^1.1.2
+  flutter_flip_card: ^0.0.6
+  flutter_svg: ^2.0.10+1
+  simple_animations: ^5.0.0+3
+  sensors_plus: ^6.1.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -78,7 +82,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/animations/
-  #   - images/a_dot_ham.jpeg
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
