--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   get: ^4.7.2
   google_fonts: ^6.2.1
   flutter_animate: ^4.4.0
-  intl: ^0.19.0
+  intl: 0.20.2
   flutter_localization: ^0.3.0
   shared_preferences: ^2.5.3
   lottie: ^3.0.0
@@ -67,6 +67,8 @@ dev_dependencies:
   flutter_svg: ^2.0.10+1
   simple_animations: ^5.0.0+3
   sensors_plus: ^6.1.1
+  percent_indicator: ^4.2.5
+  flutter_slidable: ^3.1.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -82,7 +84,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/animations/
-    - assets/icons/
+#    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
